[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.28", features = ["rustls-tls-manual-roots-no-provider"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aws-lc-rs = "1"
rustls = { version = "0.23", features = ["std", "prefer-post-quantum"], default-features = false }
rustls-pki-types = "1"
webpki-roots = "0.26"
