[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["rustls-tls-manual-roots"], default-features = false }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
rustls = { version = "0.23", features = ["std", "prefer-post-quantum"], default-features = false }
rustls-pki-types = "1.14.0"
webpki-roots = "1.0.6"
