[package]
name = "pqctracer"
version = "1.0.0"
edition = "2024"
description = "A reusable TLS-aware HTTP client that captures post-quantum cryptography handshake metadata."
license = "GPL-3.0"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.12", features = ["rustls-tls-manual-roots"], default-features = false }
rustls = { version = "0.23", features = ["std", "prefer-post-quantum"], default-features = false }
rustls-pki-types = "1.14.0"
webpki-roots = "1.0.6"
